plugins {
    id 'java'
    id 'idea'
    id 'java-library'
}

group = 'com.livk'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_17

dependencies {
    api 'com.alibaba:easyexcel'
    api 'org.burningwave:core'
    api 'org.springframework.boot:spring-boot-starter-web'
}

test {
    useJUnitPlatform()
}
